# local-llm-scripts

./: .cspell.json  README.md  Taskfile.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
src/: __init__.py  elyza.py  llm_jp.py
src/internal/: data_directory.py  log_settings.py
src/til-20230920/: index.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/til-20230920/src/: elyza.py  llm-jp.py
src/til-20230920/src/internal/: __init__.py  log_settings.py
