[project]
authors = [{name = "iimuz", email = "iz.primary.story+github@gmail.com"}]
description = "local llm scripts."
license = {file = "LICENSE"}
name = "local_llm_scripts"
readme = "README.md"
requires-python = ">=3.10"
urls = {repository = "https://github.com/iimuz/til/src/til-20230917"}
version = "0.1.0"

dependencies = [
  "pydantic",
  "torch",
  "transformers",
]

[tools.setuptools.package-dir]
llm_scripts = "src"

[project.optional-dependencies]
dev = [
  "mypy",
  "ruff",
]
test = ["pytest"]

[build-system]
requires = ["setuptools>=68", "wheel"]

[tool.isort]
profile = "black"
