[project]
authors = [{name = "iimuz", email = "iz.primary.story+github@gmail.com"}]
description = "local llm scripts."
license = {file = "LICENSE"}
name = "local_llm_scripts"
readme = "README.md"
requires-python = ">=3.10"
urls = {repository = "https://github.com/iimuz/til/src/til-20230917"}
version = "0.1.0"

dependencies = [
  "pydantic",
  "torch",
  "transformers",
]

[tools.setuptools.package-dir]
llm_scripts = "src"

[project.optional-dependencies]
dev = [
  "mypy",
  "ruff",
]
test = ["pytest"]

[build-system]
requires = ["setuptools>=68", "wheel"]

[tool.isort]
profile = "black"

[tool.ruff]
# same as black
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Allow lint for all enabled rules
select = ["ALL"]
ignore = [
  "D211",  # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
  "D212",  # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible.
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"  # Like Black, use double quotes for strings.
indent-style = "space"  # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false  # Like Black, respect magic trailing commas.
line-ending = "auto"  # Like Black, automatically detect the appropriate line ending.
